// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___2yQOc"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__preview-col___1pWYq"
  >
    <img
      alt="preview"
      className="src-shared-components-SubmissionManagement-Submission-___styles__dev-img___rbFEF"
      src="https://studio.topcoder-dev.com?module=DownloadSubmission&sbmid=undefined&sbt=tiny&sfi=1"
    />
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___zC6Hi"
  />
  <td />
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___3XOxK"
  >
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___2M1RY"
  >
    <div>
      <a>
        <DownloadIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </a>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__delete-icon___2M67z"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <DeleteIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___TDY6Y src-shared-components-SubmissionManagement-Submission-___styles__expanded___8pRX_"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;

exports[`Snapshot match 2`] = `
<tr
  className="src-shared-components-SubmissionManagement-Submission-___styles__submission-row___2yQOc"
>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__preview-col___1pWYq"
  >
    <img
      alt="preview"
      className="src-shared-components-SubmissionManagement-Submission-___styles__dev-img___rbFEF"
      src="https://studio.topcoder-dev.com?module=DownloadSubmission&sbmid=12345&sbt=tiny&sfi=1"
    />
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__id-col___zC6Hi"
  >
    12345
  </td>
  <td />
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__date-col___3XOxK"
  >
    Invalid date
  </td>
  <td
    className="src-shared-components-SubmissionManagement-Submission-___styles__action-col___2M1RY"
  >
    <div>
      <a>
        <DownloadIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </a>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__delete-icon___2M67z"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <DeleteIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        className="src-shared-components-SubmissionManagement-Submission-___styles__expand-icon___TDY6Y"
        onClick={[Function]}
        type="button"
      >
        <ExpandIcon
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </td>
</tr>
`;
